# ShareWithMe_Rust

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  package-lock.json  package.json
.github/workflows/: deploy.yml
schema/: sharewithme.sql
src/: api.rs  config.rs  digest.rs  error.rs  main.rs  models.rs  render.rs  state.rs  store.rs
src/analysis/: ai.rs  classify.rs  metadata.rs  metadata_json.rs  mod.rs  tests.rs  url.rs
src/api/: api_tests.rs
src/store/: local.rs  mod.rs  supabase.rs
tools/: render_extract.mjs
