[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
regex = "1.12.4"
reqwest = { version = "0.13.4", features = ["json", "rustls"] }
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5.8"
uuid = { version = "1.23.3", features = ["v4", "serde"] }
